Reworked home page

--- a/projects/templates/projects/projectsmain.html
+++ b/projects/templates/projects/projectsmain.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="David A. C. Campbell">
     <meta name="generator" content="Jekyll v3.8.5">
-    <title>CampBull - Home</title>
+    <title>Projects Main</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
@@ -41,8 +41,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
+          <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
           <a class="nav-item nav-link" href="#">About</a>
-          <a class="nav-item nav-link" href="{% url 'projectsmain' %}">Projects</a>
           <a class="nav-item nav-link" href="#">Blog</a>
 
         </div>
@@ -50,28 +50,37 @@
     </nav>
 </header>
 
-<main role="main" style="background: #1f821c">
+<main role="main">
 
-  <section class="jumbotron text-center" >
+  <section class="jumbotron text-center">
     <div class="container">
       <h1 class="jumbotron-heading">Welcome to Camp Bull</h1>
-      <p class="lead text">Legs must be escorted at all times.</p>
-
+      <p class="lead text-muted">Legs must be escorted at all times.</p>
+      <p>
+        <a href="#" class="btn btn-primary my-2">Main call to action</a>
+        <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+      </p>
     </div>
-    <p>New stuff here</p>
   </section>
-  <article class="text-center">
-    <h1>Camp Bull</h1>
-    <p>Camp Bull has been my home since I left the Army in 2003.</p>
-    <img class="img-center" src="/media/images/Camp_Bull_2018.jpg" usemap="#campmap" />
-    <map name="campmap">
-      <area shape="circle" coords="345,245,40" href="https://www.google.com/maps/@40.8870768,-95.9058368,598m/data=!3m1!1e3?hl=en" alt="ThreeAmigos">
 
-    </map>
+  <div class="album py-5 bg-light">
+    <div class="container">
 
-      <p class="card-text">Put stuff here</p>
-  </article>
+      <div class="row">
 
+        {% for project in projects.all %}
+         <div class="col-md-4">
+           <div class="card mb-4 box-shadow">
+             <img class="card-img-top" src="{{ project.image.url }}" />
+             <div class="card-body">
+               <p class="card-text">{{ project.summary }}</p>
+             </div>
+           </div>
+         </div>
+         {% endfor %}
+      </div>
+    </div>
+  </div>
 
 </main>
 
