--- a/projects/templates/projects/projectsmain.html
+++ b/projects/templates/projects/projectsmain.html
@@ -50,38 +50,38 @@
     </nav>
 </header>
 
-<main role="main">
+<main role="main" >
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1 class="jumbotron-heading">Welcome to Camp Bull</h1>
-      <p class="lead text-muted">Legs must be escorted at all times.</p>
-      <p>
-        <a href="#" class="btn btn-primary my-2">Main call to action</a>
-        <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-      </p>
+      <h1 class="jumbotron-heading">Camp Bull Projects</h1>
+      <p class="lead text-muted">This is what we do here.</p>
+      <p></p>
     </div>
   </section>
+  <div class="container" style="background: #1f821c">
 
-  <div class="album py-5 bg-light">
-    <div class="container">
 
-      <div class="row">
+    <div class="album py-5 bg-light" style="background: #1f821c">
+      <div class="container" style="background: #1f821c" >
 
-        {% for project in projects.all %}
-         <div class="col-md-4">
-           <div class="card mb-4 box-shadow">
-             <img class="card-img-top" src="{{ project.image.url }}" />
-             <div class="card-body">
-               <p class="card-text">{{ project.summary }}</p>
+        <div class="row" style="background: #1f821c">
+
+          {% for project in projects.all %}
+           <div class="col-md-4" >
+             <p class='text-center'>{{project.project_name}}</p>
+             <div class="card mb-4 box-shadow">
+               <img class="card-img-top" src="{{ project.image.url }}" />
+               <div class="card-body">
+                 <p class="card-text">{{ project.summary }}</p>
+               </div>
              </div>
            </div>
-         </div>
-         {% endfor %}
+           {% endfor %}
+        </div>
       </div>
     </div>
   </div>
-
 </main>
 
 <footer class="text-muted">
